--- a/Merge.html
+++ b/Merge.html
@@ -2,7 +2,7 @@
 <html>
     <head>
 
-        <title>  EUFONÍA - Your favourite music is here</title>
+        <title>  EUFONÍA - Your favourite music is here and fun for all</title>
         <link rel="stylesheet" href="style.css">
         </head>
 <body>
